src/features/mainStyles.css
/**
 * Fullscreen modal styles 
 */
#btd-fullscreen-portal-root {
  background-color: var(--btd-overlay-background);
  color: white;
  position: fixed;
  width: 100%;
  height: 100%;
  display: none;
  z-index: 9999;
}

#btd-fullscreen-portal-root.open {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/**
 * Override TweetDeck's modal styles.
 */

:root {
  --btd-overlay-background: rgba(0, 0, 0, 0.88);
  --btd-original-overlay-background: rgba(0, 0, 0, 0.88);
}

html .btd-loaded .overlay,
html .btd-loaded .ovl {
  background-color: var(--btd-overlay-background);
  transition-property: background-color;
  transition-duration: 0.5s;
}

.js-modal-panel.mdl.s-full.med-fullpanel {
  background: transparent;
  pointer-events: none;
  box-shadow: none;
}

.js-mediatable .js-modal-panel .js-mediaembed,
.med-tweet,
.mdl-btn-media {
  pointer-events: all;
}

.mdl-media-prev,
.mdl-media-next {
  background: transparent !important;
  z-index: 10;

  & .icon::after {
    content: '';
    position: absolute;
    background: rgba(21, 21, 21, 0.6);
    border-radius: 50%;
    width: 42px;
    height: 42px;
    top: 0;
    left: 0;
    z-index: 0;
  }

  & .icon::before {
    position: absolute;
    left: 45%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
  }
}

.mdl-media-next .icon::after {
  transform: translate(-22%, -20%);
}

.mdl-media-prev .icon::after {
  transform: translate(-16%, -20%);
}

/**
 * Some fixes around default dark theme
 */

html.dark .lst-modal {
  background: #15202b;
  border: 1px solid #38444d;
}

html.dark .typeahead .fullname,
html.dark .typeahead .username,
html.dark .typeahead .js-hashtag {
  color: white;
}

/* Small UI tweaks */
.app-columns {
  padding-top: 0 !important;
  padding-bottom: 0 !important;
  padding-left: 0 !important;
}

.app-columns-container {
  bottom: 0 !important;
}

.column {
  margin-right: 2px !important;
}

.js-media.media-grid-container + p.txt-ellipsis {
  display: none;
}

.app-navigator > a.js-header-action:not(.is-hidden) {
  display: flex !important;
  flex-direction: row !important;
  align-items: center !important;
}

.app-navigator > a.js-header-action:not(.is-hidden) > .padding-ts {
  padding-top: 0 !important;
}

.btd-loaded .btd-banner {
  background-image: linear-gradient(-45deg, rgb(0, 160, 251) 47%, rgb(0, 203, 252) 100%);
  text-shadow: rgba(0, 0, 0, 0.28) 0px 2px 2px;
  font-weight: 600;
  padding: 10px !important;
}

.btd-loaded .btd-banner a {
  text-shadow: none;
}

.btd-loaded .btd-banner-button {
  border-radius: 25px;
  background-color: white;
  color: #009eff !important;
  padding: 4px 10px 7px;
  display: inline-block;
  text-decoration: none !important;
  box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 1px 0px, rgba(0, 0, 0, 0.2) 0px 2px 20px;

  &:hover {
    background-color: #eeeeee;
    text-decoration: none !important;
  }
}

/* Prevent horizontal scrollbar in columns inside modals */
.js-modal.open-modal div.js-right-column.scroll-v {
  overflow-x: hidden;
}

.column-navigator {
  bottom: 280px;
}

.column-navigator-overflow {
  bottom: 300px;
}

.icon-user-check:before {
  content: '\F105';
}
.icon-earth:before {
  content: '\F102';
}

#settings-modal .mdl-content {
  display: flex;
}

#settings-modal > .mdl {
  width: 800px;
  height: 600px;
}

@media (max-width: 810px) {
  #settings-modal > .mdl {
    width: 90vh;
  }
}

@media (max-height: 620px) {
  #settings-modal > .mdl {
    height: 90vh;
  }
}

#settings-modal .mdl-content > .mdl-column-lrg {
  width: auto !important;
  flex: 1;
}

#settings-modal .mdl-content #general_settings .control-group .divider-bar + div {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: auto;
}

html body {
  background-color: #1c2938;
}
html.dark body {
  background-color: #15202b;
}

.btd-profile-label:not(.pronouns) {
  flex-basis: 100%;
}

.tweet .btd-profile-label:hover {
  color: #8899a6 !important;
}

.btd-profile-label img {
  margin-right: 2px;
  height: 15px;
  width: 15px;
}

.account-summary-text .btd-profile-label {
  display: inline-block;
  margin-top: 4px;
}

.prf-header .btd-profile-label img {
  filter: brightness(100) drop-shadow(0 1px 1px rgba(20, 23, 26, 0.8));
}

.btd-profile-label.pronouns + .other-replies {
  text-transform: lowercase;
}

.btd-profile-label.pronouns + .other-replies::before {
  content: '\00A0\00B7';
}

.btd-profile-label.pronouns + .other-replies > a {
  text-transform: none;
}

.pronouns-wrapper + .pronouns-wrapper {
  display: none !important;
}

.thread + .pronouns-wrapper {
  margin-top: 3px;
}

